Added Amazon Urchin tracking to pages.

--- a/TODO
+++ b/TODO
@@ -1,57 +1,1 @@
-* Generate docs from XML files (i.e., skip the lexer phase).
-
-* Clean-up and compartmentalize the code.
-
-* Support PHPDoc syntax via the PHP extension.
-
-* Provide support for configuring default template and title via a config file.
-
-* Provide cleaner API and documentation for writing your own templates and template definitions.
-
-* Function for indenting new lines automatically.
-
-* Prevent rm -Rf /
-
-* Write tests for the NaturalDocs parser.
-
-* Produce HTML, XML and JSON formats.
-
-* Alter XML/JSON output to better reflect PHPDoc syntax as well.
-
-* Roll up search_index.js and tree.js in the template definitions.
-
-* Generate offline docs in multiple compression formats.
-
-* Runtime in hh:mm:ss time.
-
-* Cleaner implementation of the hash events.
-
-* Implement SyntaxHighlighter instead of Chili.
-
-* Re-write the JavaScript to be smaller, faster, and pass JSLint.
-
-* Fully integrate Markdown syntax into the core. XML and JSON output should have HTMLified content.
-
-* Better PHP wrapper around examples.
-
-* Cache the post-processed examples.
-
-* Pull-in the information files based on a config file. e.g., README.md, LICENSE.md, NOTICE.md, etc.
-
-* Maintain central index for linkmap, which should simplify all internal link-mapping.
-
-* Create a CSS file for Markdown-to-HTML content.
-
-* Clean-up the use of PHP shorthand tags.
-
-* Make it Windows-friendly.
-
-* Block classes via a config file.
-
-* Block private by default.
-
-* Document global & class constants.
-
-* Provide a spot for Vanity documentation.
-
-* Provide support for JavaScript-based documentation systems.
+See https://github.com/skyzyx/vanity/issues
