--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 # TODO
 
-* Composer package
 * Phar generation
 
 * Markdown
@@ -11,37 +10,29 @@
 
 --------
 
+Dynamic event firing:
+- Parsing docblocks, fire custom event on discovery (e.g., parser.docblock.tag.aliasof)
+- Generate formats, fire for events that are registered (e.g., generator.format.annotated)
+- Generate archives, fire for events that are registered (e.g., generator.archive.lzma.7z)
+
 #	modified:   src/Vanity/Generator/Helper/Tooltip.class.php
 #	modified:   src/Vanity/Generator/Index.class.php
 #	modified:   src/Vanity/Generator/Page.class.php
+
 #	modified:   src/Vanity/Handler/Bootstrap.class.php
 #	modified:   src/Vanity/Handler/CLI.class.php
 #	modified:   src/Vanity/Handler/Changelog.class.php
 #	modified:   src/Vanity/Handler/Config.class.php
 #	modified:   src/Vanity/Handler/Example.class.php
 #	modified:   src/Vanity/Handler/Group.class.php
+
 #	modified:   src/Vanity/Mapper/Changelog.class.php
 #	modified:   src/Vanity/Mapper/Example/PHPT.class.php
+#	modified:   src/Vanity/Mapper/Example/PHPUnit.class.php
 #	modified:   src/Vanity/Mapper/Group.class.php
+
 #	modified:   src/Vanity/Parser/Class.class.php
 #	modified:   src/Vanity/Parser/Constant.class.php
-#	modified:   src/Vanity/Parser/Docblock/Description.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/AliasOf.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Author.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Changelog.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Copyright.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Deprecated.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Example.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Ignore.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/License.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Link.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Option.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Param.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Return.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/See.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Since.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Todo.class.php
-#	modified:   src/Vanity/Parser/Docblock/Tag/Var.class.php
 #	modified:   src/Vanity/Parser/File.class.php
 #	modified:   src/Vanity/Parser/Interface.class.php
 #	modified:   src/Vanity/Parser/Method.class.php
